Fix grammar to content

--- a/cv-elena.html
+++ b/cv-elena.html
@@ -33,7 +33,7 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="about-us.html"  class="active">About Us</a>
+                <a href="about-us.html" class="active">About Us</a>
             </li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Services</a>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="cv-description">
                     <p> Elena Koundourou studied occupational therapy at the Technological Educational Institute
-                        ofAthens and completed her studies at the Karolinska Institute of Stockholm, where she also
+                        of Athens and completed her studies at the Karolinska Institute of Stockholm, where she also
                         specialized in neurological rehabilitation. From 2000 to 2004 she worked as an external
                         collaborator in a rehabilitation center, special therapies offices and home treatments, while at
                         the same time she began to specialize in pediatric occupational therapy and even more
@@ -70,7 +70,7 @@
                         rehabilitation center. In 2005 she created the occupational therapy center "Exelixis" which
                         maintains to this day with main interest the rehabilitation of neurological and developmental
                         disorders in children.</p>
-                    <p> Since 2014, the occupational therapy center "ekelixis" co-located and permanently cooperated
+                    <p> Since 2014, the occupational therapy center "Exelixis" co-located and permanently cooperated
                         with the Speech Therapy Center, thus improving the services provided to the clients of the two
                         places. She is a supervisor of occupational therapy students and graduates and a member of the
                         interdisciplinary team of several preschools in Thessaloniki.</p>
