--- a/cv-katerina.html
+++ b/cv-katerina.html
@@ -63,9 +63,9 @@
                     <p> Katerina Gesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
                         Department of Physical Education and Sports Science (TEFAA) with a specialization in Special
                         Physical Education. She continued her specialization with two master's degrees. The first comes
-                        from the Master's Program "Kinesiology" TEFAA Serres where he dealt with the effect of
+                        from the Master's Program "Kinesiology" TEFAA Serres where she dealt with the effect of
                         Electrical Stimulation on the fatigue of the thenar muscles while the second from the Special
-                        Inclusive Education European University of Cyprus where he dealt with the Evaluation of the
+                        Inclusive Education European University of Cyprus where she dealt with the Evaluation of the
                         understanding of the emotions of others through of Psychokinetic by children with Autism
                         Spectrum Disorder.
                     </p>
@@ -81,11 +81,11 @@
                     </p>
                     <p> From 2005 to 2018, she worked as an external partner in kindergartens and PWD structures,
                         organizing Psychomotor and Adapted Physical Activity programs for children with mobility
-                        difficulties. Since 2007, he has been delivering personalized programs of Kinetic Intervention,
+                        difficulties. Since 2007, she has been delivering personalized programs of Kinetic Intervention,
                         Occupational Therapy and Hydrotherapy at home in collaboration with private and public swimming
                         pools of the city and from 2012-2017 he provided parallel educational support to children with
-                        Autism Spectrum Disorder (ASD) and Down syndrome, while at the same time he was external partner
-                        in a private Physiotherapy Center where he began to specialize in pediatric Occupational
+                        Autism Spectrum Disorder (ASD) and Down syndrome, while at the same time she was external partner
+                        in a private Physiotherapy Center where she began to specialize in pediatric Occupational
                         Therapy. From 2017-2022 she worked in large Rehabilitation Centers supporting the adult
                         Occupational Therapy department, while she was simultaneously in charge of their corresponding
                         Pediatric department. From 2021 she works as an occupational therapist at the "Evolution"
