--- a/cv-maria.html
+++ b/cv-maria.html
@@ -82,11 +82,9 @@
                         Phonological Progression Test (P.S.L., 1995), the School Readiness Test A Test as well as the
                         weighted language assessment tool Logometer.
                     </p>
-                    <p> She participated in the workshop (25 hours) on: Problems
-                        that occur in the comprehension and production of oral speech, in relation to the particular
-                        characteristics of the Greek language. Their evaluation, diagnosis and treatment. (Levanti
-                        Irene,
-                        2014).
+                    <p> She participated in the workshop (25 hours) on: Problems that occur in the comprehension and
+                        production of oral speech, in relation to the particular characteristics of the Greek language.
+                        Their evaluation, diagnosis and treatment. (Levanti Irene, 2014).
                     </p>
                     <p> She has sufficient professional knowledge in Dyslexia – Assessment and Intervention Techniques
                         as well as Deficit Hyperactivity Disorder (ADHD)- (Papanastasiou 2021). She has attended
