--- a/occupational-therapy.html
+++ b/occupational-therapy.html
@@ -62,31 +62,31 @@
             </p>
             <h4>These areas concern:</h4>
             <ul>
-                <li>Self-service of the individual and his independence in activities of daily life such as feeding,
+                <li>Self-service of the individual and their independence in activities of daily life such as feeding,
                     clothing-shoes safety, movement, personal hygiene.</li>
-                <li>The productivity of the individual where his ability in the field of work is assessed. For the
-                    child, "work" is the game and his learning development. </li>
+                <li>The productivity of the individual where their ability in the field of work is assessed. For the
+                    child, "work" is the game and their learning development. </li>
                 <li>The person's mobility, where their ability to coordinate parts of the body (upper and lower
-                    limbs)
-                    with fine or gross mobility is mainly evaluated.</li>
-                <li>The person's sensory skills where his ability to perceive his body (somatocognition) and how he
-                    perceives the body's relationship with the environment (kinaesthesia) is assessed.</li>
+                    limbs) with fine or gross mobility is mainly evaluated.</li>
+                <li>The person's sensory skills where their ability to perceive their body (somatocognition) and how
+                    they perceives the body's relationship with the environment (kinaesthesia) is assessed.</li>
             </ul>
             <p>Visual and auditory perception (the individual's perception of visual and auditory stimuli) and
                 stereocognition (determining the size, texture and shape of an object).</p>
             <ul>
-                <li>The Cognitive skills of the person where his ability to perceive, memory, attention - concentration,
-                    thinking, communication, judgment and other mental abilities that play a primary role in the process
-                    of processing cognitive information are assessed.</li>
+                <li>The Cognitive skills of the person where their ability to perceive, memory, attention -
+                    concentration, thinking, communication, judgment and other mental abilities that play a primary role
+                    in the process of processing cognitive information are assessed.</li>
 
-                <li>The productivity of the individual where his ability in the field of work is assessed. For the
-                    child, "work" is the game and his learning development. </li>
+                <li>The Behavior and Socialization of the individual so that they adapt (behaviorally) to a given
+                    situation. To have self-awareness, to participate in dyadic and group relationships (interaction of
+                    a person with familiar and strangers). Also to follow rules of social behavior.</li>
             </ul>
             <h4>Occupational Therapy Intervention
             </h4>
             <p> The occupational therapist in accordance with these areas evaluates the functionality of the
-                individual and trains the skills he must have in order to cope satisfactorily with the demands of
-                his daily life.</p>
+                individual and trains the skills they must have in order to cope satisfactorily with the demands of
+                their daily life.</p>
             <h4>Pediatric Occupational Therapy and Intervention</h4>
             <p> Pediatric occupational therapy deals with disorders that hinder the normal development of children.
                 There, the occupational therapist, using play as the main medium, deals with training the child's skills
