--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -61,59 +61,53 @@
                 or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
                 speech and voice and the speech production of the hard of hearing. </p>
 
-            <p> From the age of about eighteen months until the day the child goes to school, he first learns sounds,
-                then words, and finally to make sentences. But if he does not learn to speak properly, when he later
-                goes to school he will have difficulty writing properly.
-                Many of the children who have learning difficulties at school age had speech problems in preschool.
-                Fortunately, however, the reverse is not the case: It is not a rule that all children who have
-                speech
-                problems will also develop learning problems. This is because, when speech problems are detected
-                very
-                early, they can be overcome relatively easily with the help of a specialist.</p>
+            <p> From the age of about eighteen months until the day the children go to school, they first learn sounds,
+                then words, and finally to make sentences. But if they do not learn to speak properly, when they later
+                go to school they will have difficulty writing properly. Many of the children who have learning
+                difficulties at school age had speech problems in preschool. Fortunately, however, the reverse is not
+                the case: It is not a rule that all children who have speech problems will also develop learning
+                problems. This is because, when speech problems are detected very early, they can be overcome relatively
+                easily with the help of a specialist.</p>
 
             <p> For a parent to understand that their child has a learning problem, they must first join the learning
-                process. However, from very early on there may be signs that the child will have difficulties in
-                school.
-                Already at the age of 2.5 years, unintelligible or difficult to understand speech is a sign that
-                should
-                concern parents, as it hides a complex phonological disorder that can affect his ability later to
-                correctly decode syllables and words containing sounds that he had difficulty to produce earlier.
-                Each
-                person has their own pace of development. But there are certain time limits that, when exceeded,
-                parents
+                process. However, from very early on there may be signs that the child will have difficulties in school.
+                Already at the age of 2.5 years, unintelligible or difficult to understand speech is a sign that should
+                concern parents, as it hides a complex phonological disorder that can affect their ability later to
+                correctly decode syllables and words containing sounds that they had difficulty to produce earlier. Each
+                person has their own pace of development. But there are certain time limits that, when exceeded, parents
                 should seek expert advice.
             </p>
             <h4>Up to 12 months</h4>
             <ul>
                 <li>Baby reacts to sounds</li>
                 <li>Makes eye contact</li>
-                <li>He recognizes his mother's voice</li>
-                <li>He smiles when you talk to him</li>
-                <li>It lives up to its name</li>
-                <li>He turns his head towards the source of the sounds</li>
-                <li>Has some basic vocabulary</li>
+                <li>They recognize their mother's voice</li>
+                <li>They smile when you talk to them</li>
+                <li>They respond to their name</li>
+                <li>They turn their head towards the source of the sounds</li>
+                <li>Have some basic vocabulary</li>
             </ul>
             <h4>Up to 2 years old</h4>
             <ul>
-                <li>His vocabulary has 20-50 words</li>
-                <li>Obeys simple commands</li>
-                <li>Uses two words to form sentences</li>
-                <li>Uses various toys symbolically (e.g. feeding a baby, etc.)</li>
+                <li>Their vocabulary has 20-50 words</li>
+                <li>Obey simple commands</li>
+                <li>Use two words to form sentences</li>
+                <li>Use various toys symbolically (e.g. feeding a baby, etc.)</li>
             </ul>
             <h4>Up to 3 years old</h4>
             <ul>
-                <li>Answers questions</li>
-                <li>Makes simple suggestions</li>
-                <li>He can watch a dialogue</li>
-                <li>He likes fairy tales and follows them easily</li>
-                <li>He asks questions</li>
+                <li>Answer questions</li>
+                <li>Make simple suggestions</li>
+                <li>They can watch a dialogue</li>
+                <li>They like fairy tales and follows them easily</li>
+                <li>They ask questions</li>
             </ul>
             <h4> Up to 4 years old</h4>
             <ul>
-                <li>It answers all kinds of questions</li>
-                <li>It is understood even by people he does not know</li>
-                <li>His speech is closer to that of adults in terms of grammar and syntax</li>
-                <li>He narrates his experiences</li>
+                <li>They answer all kinds of questions</li>
+                <li>They are understood even by people they do not know</li>
+                <li>Their speech is closer to that of adults in terms of grammar and syntax</li>
+                <li>They narrate his experiences</li>
             </ul>
         </div>
         <div class="therapy-image">
