--- a/special-education.html
+++ b/special-education.html
@@ -86,9 +86,9 @@
             </ul>
             <h4>The special educator usually follows the following steps:</h4>
             <ul>
-                <li>He thoroughly assesses the child with weighted and unweighted tools that examine all of his skills
+                <li>They thoroughly assess the child with weighted and unweighted tools that examine all of their skills
                     and sets the program's goals.</li>
-                <li>Based on the assessment, he prepares an individualized intervention program in order to strengthen
+                <li>Based on the assessment, they prepare an individualized intervention program in order to strengthen
                     the child's weaknesses.</li>
                 <li>The goals set are of gradable difficulty and constantly evolve during the program depending on the
                     child's goals.</li>
