Fix grammar to content

--- a/cv-maria.html
+++ b/cv-maria.html
@@ -86,7 +86,7 @@
                         production of oral speech, in relation to the particular characteristics of the Greek language.
                         Their evaluation, diagnosis and treatment. (Levanti Irene, 2014).
                     </p>
-                    <p> She has sufficient professional knowledge in Dyslexia – Assessment and Intervention Techniques
+                    <p> She has sufficient professional knowledge in Dyslexia - Assessment and Intervention Techniques
                         as well as Deficit Hyperactivity Disorder (ADHD)- (Papanastasiou 2021). She has attended
                         numerous seminars - workshops such as "Speech Problems: Assessment - Differential Diagnosis -
                         Treatment ", THERAPLAY, "Stuttering in childhood", Vision and Learning, Vision and Autism ,
