Update style and fix grammar to therapy pages

--- a/special-education.html
+++ b/special-education.html
@@ -63,12 +63,12 @@
             </p>
             <h4>In order to achieve the goals of special education, it has been given the following characteristics:
             </h4>
-            <ul>
+            <ol type="a">
                 <li>special diagnostic, medical, psychological and educational services</li>
                 <li>special programs </li>
                 <li>special areas</li>
                 <li>special instruments and means as well as special teaching techniques.</li>
-            </ul>
+            </ol>
 
             <p><b>The role of the special educator</b> is important and extremely helpful in improving the child's
                 learning
@@ -82,17 +82,17 @@
                 <li>concentration of attention</li>
                 <li>verbal and non-verbal communication</li>
                 <li>self service</li>
-                <li>social skills.</li>
+                <li>social skills</li>
             </ul>
             <h4>The special educator usually follows the following steps:</h4>
-            <ul>
+            <ol>
                 <li>They thoroughly assess the child with weighted and unweighted tools that examine all of their skills
                     and sets the program's goals.</li>
                 <li>Based on the assessment, they prepare an individualized intervention program in order to strengthen
                     the child's weaknesses.</li>
                 <li>The goals set are of gradable difficulty and constantly evolve during the program depending on the
                     child's goals.</li>
-            </ul>
+            </ol>
         </div>
         <div class="therapy-image">
             <img src="assets/images/therapies-image.jpg" alt="">
