--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -107,7 +107,7 @@
                 <li>They answer all kinds of questions</li>
                 <li>They are understood even by people they do not know</li>
                 <li>Their speech is closer to that of adults in terms of grammar and syntax</li>
-                <li>They narrate his experiences</li>
+                <li>They narrate their experiences</li>
             </ul>
         </div>
         <div class="therapy-image">
