Add alt description to images to therapy pages

--- a/parental-counselling.html
+++ b/parental-counselling.html
@@ -78,7 +78,7 @@
                 the treatment plan.</p>
         </div>
         <div class="therapy-image parental-image">
-            <img src="assets/images/therapies-image.jpg" alt="">
+            <img src="assets/images/therapies-image.jpg" alt="kids-doing-artwork">
         </div>
     </section>
 
