--- a/special-education.html
+++ b/special-education.html
@@ -95,7 +95,7 @@
             </ol>
         </div>
         <div class="therapy-image">
-            <img src="assets/images/therapies-image.jpg" alt="">
+            <img src="assets/images/therapies-image.jpg" alt="kids-doing-artwork">
         </div>
     </section>
 
