--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -111,7 +111,7 @@
             </ul>
         </div>
         <div class="therapy-image">
-            <img src="assets/images/therapies-image.jpg" alt="">
+            <img src="assets/images/therapies-image.jpg" alt="kids-doing-artwork">
         </div>
     </section>
 
