--- a/occupational-therapy.html
+++ b/occupational-therapy.html
@@ -26,7 +26,7 @@
         </div>
         <input id="menu-toggle" type="checkbox">
         <label class='menu-button-container' for="menu-toggle">
-            <a class='menu-button'></a>
+            <a class='menu-button'> </a>
         </label>
         <ul class="menu">
             <li>
@@ -121,7 +121,7 @@
             </ul>
         </div>
         <div class="therapy-image occup-image">
-            <img src="assets/images/therapies-image.jpg" alt="">
+            <img src="assets/images/therapies-image.jpg" alt="kids-doing-artwork">
         </div>
     </section>
 
