--- a/thank-you-pg.html
+++ b/thank-you-pg.html
@@ -26,7 +26,7 @@
         </div>
         <input id="menu-toggle" type="checkbox">
         <label class='menu-button-container' for="menu-toggle">
-            <a class='menu-button'></a>
+            <a class='menu-button'><span id="menu-button-rm">-</span></a>
         </label>
         <ul class="menu">
             <li>
