Update style to index.html and to all images. Update images to index.html

--- a/index.html
+++ b/index.html
@@ -75,60 +75,74 @@
     <section class="services-container">
         <h2>Our Services</h2>
         <div class="services">
-            <div class="services-top-1">
-                <h3>Speech Therapy</h3>
-                <p> Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
-                    disorders in children and adults, whatever the cause of these disorders: neurological, developmental
-                    or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
-                    speech and voice and the speech production of the hard of hearing. </p>
-                <p><a href="speech-therapy.html">Learn more about this service</a></p>
+            <div class="services-top">
+                <div class="services-top-1">
+                    <h3>Speech Therapy</h3>
+                    <p> Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
+                        disorders in children and adults, whatever the cause of these disorders: neurological,
+                        developmental
+                        or functional. It aims at the development of extra-verbal and verbal communication, the clarity
+                        of
+                        speech and voice and the speech production of the hard of hearing. </p>
+                    <p><a href="speech-therapy.html">Learn more about this service</a></p>
+                </div>
+                <div class="services-top-2">
+                    <h3>Occupational Therapy</h3>
+                    <p> Occupational therapy is a specialized science in the field of health, which improves skills of
+                        people with dysfunction in the areas of development.
+                    </p>
+                    <h4>These areas concern:</h4>
+                    <ul>
+                        <li>Self-service of the individual and his independence in activities of daily life such as
+                            feeding,
+                            clothing-shoes safety, movement, personal hygiene.</li>
+                        <li>The productivity of the individual where his ability in the field of work is assessed. For
+                            the
+                            child, "work" is the game and his learning development. </li>
+                    </ul>
+                    <p><a href="occupational-therapy.html">Learn more about this service</a></p>
+                </div>
             </div>
-            <div class="services-top-2">
-                <h3>Occupational Therapy</h3>
-                <p> Occupational therapy is a specialized science in the field of health, which improves skills of
-                    people with dysfunction in the areas of development.
-                </p>
-                <h4>These areas concern:</h4>
-                <ul>
-                    <li>Self-service of the individual and his independence in activities of daily life such as feeding,
-                        clothing-shoes safety, movement, personal hygiene.</li>
-                    <li>The productivity of the individual where his ability in the field of work is assessed. For the
-                        child, "work" is the game and his learning development. </li>
-                </ul>
-                <p><a href="occupational-therapy.html">Learn more about this service</a></p>
-            </div>
-            <div class="services-image">
-                <img src="assets/images/image-center-1.jpg"
-                    alt="girl-in-gray-dress-and-gray-tights-playing-on-white-rug-with-woman-in-white-sweater">
+            <div class="services-image-top">
+                <img src="assets/images/services-img-top.jpg" width="600" height="400" alt="kids-at-the-daycare">
             </div>
         </div>
     </section>
     <hr>
     <section class="services-container">
         <div class="services">
-            <div class="services-bottom-1">
-                <h3>Parental Counselling</h3>
-                <p> Parent counseling takes place between the parents and the psychologist/psychotherapist to whom they
-                    turn. In the counseling sessions, the issues that concern the parents in relation to their child,
-                    the family or their own role as parents are discussed. These issues may concern issues in a child's
-                    behavior, emotional difficulties, difficulties in socialization or difficulties that parents face in
-                    their own role.
-                </p>
-                <p><a href="parental-counselling.html">Learn more about this service</a></p>
+            <div class="services-bottom">
+                <div class="services-bottom-1">
+                    <h3>Parental Counselling</h3>
+                    <p> Parent counseling takes place between the parents and the psychologist/psychotherapist to whom
+                        they
+                        turn. In the counseling sessions, the issues that concern the parents in relation to their
+                        child,
+                        the family or their own role as parents are discussed. These issues may concern issues in a
+                        child's
+                        behavior, emotional difficulties, difficulties in socialization or difficulties that parents
+                        face in
+                        their own role.
+                    </p>
+                    <p><a href="parental-counselling.html">Learn more about this service</a></p>
+                </div>
+                <div class="services-bottom-2">
+                    <h3>Special Education</h3>
+                    <p>
+                        Special Education and Education is the set of educational services provided to students with
+                        confirmed special educational needs and with or without disabilities. With special education, an
+                        effort is made for the child to join society as a non-dependent but also productive member.
+                        Special
+                        education includes everything that is offered to the child and has an auxiliary role, something
+                        that
+                        must be given in the school context and throughout the child's school life.
+                    </p>
+                    <p><a href="special-education.html">Learn more about this service</a></p>
+                </div>
             </div>
-            <div class="services-bottom-2">
-                <h3>Special Education</h3>
-                <p>
-                    Special Education and Education is the set of educational services provided to students with
-                    confirmed special educational needs and with or without disabilities. With special education, an
-                    effort is made for the child to join society as a non-dependent but also productive member. Special
-                    education includes everything that is offered to the child and has an auxiliary role, something that
-                    must be given in the school context and throughout the child's school life.
-                </p>
-                <p><a href="special-education.html">Learn more about this service</a></p>
-            </div>
-            <div class="services-image">
-                <img src="assets/images/image-center-2.jpg" alt="mother-and-son-using-educational-toys">
+            <div class="services-image-bottom">
+                <img src="assets/images/services-img-bottom.jpg" width="600" height="400"
+                    alt="kids-playing-with-educational-toys-in-school">
             </div>
         </div>
     </section>
