Update our-team content

--- a/about-us.html
+++ b/about-us.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="our-team-link">
                         <h3>Katerina Gkesou <span style="font-weight: 300;">MSc MA</span></h3>
-                        <p>Occupational Therapist</p>
+                        <p>Neurodevelopmental Rehabilitation</p>
                         <a href="cv-katerina.html">View full profile</a>
                     </div>
                 </div>
