Update style to services section. Update value to screen 820px and down

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!--Services-->
 
-    <section class="services-container">
+    <section class="services-container-1">
         <h2>Our Services</h2>
         <div class="services">
             <div class="services-top">
@@ -109,7 +109,7 @@
         </div>
     </section>
     <hr>
-    <section class="services-container">
+    <section class="services-container-2">
         <div class="services">
             <div class="services-bottom">
                 <div class="services-bottom-1">
