--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Simeio Therapy | Contact | Form Submited</title>
+    <title>Simeio Therapy | Error Page</title>
 </head>
 
 <body>
@@ -50,12 +50,20 @@
     </header>
     <hr>
     <!--Error message-->
-    <div>
-        <p>How did you get here!!!</p>
-        <a href="index.html">Let's take you back to home page</a>
+    <div class="error-page-container">
+        <div class="error-page">
+            <h2>404 error - page not found</h2>
+            <p>How did you get here!!</p>
+            <p>Click our logo to return to home page</p>
+            <div class="sub-form-logo">
+                <a href="index.html">
+                    <img src="assets/images/logo-image.png" alt="Logo home button">
+                </a>
+            </div>
+        </div>
     </div>
 
-    <footer>
+    <footer class=" error-page-footer">
         <div class="footer-container">
             <div class="social">
                 <ul>
