Add apple-touch-icon to all pages

--- a/parental-counselling.html
+++ b/parental-counselling.html
@@ -9,6 +9,7 @@
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | Services | Parental Counselling</title>
 </head>
