--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@
             <p>Click our logo to return to home page</p>
             <div class="sub-form-logo">
                 <a href="index.html">
-                    <img src="assets/images/logo-image.png" alt="Logo home button">
+                    <img src="assets/images/logo-redirect.png" alt="Logo home button">
                 </a>
             </div>
         </div>
@@ -97,7 +97,8 @@
                 <h2><a href="contact.html">Contact Us</a></h2>
                 <h3>Address</h3>
                 <p><i class="fa-solid fa-location-dot"></i> Vasilis Olgas 128, Thessaloniki, Greece</p>
-                <p><i class="fa-solid fa-phone"></i> 01234567890</p>
+                <p><i class="fa-solid fa-phone"></i> +30 693 6927305</p>
+                <p><i class="fa-solid fa-phone"></i> +30 231 0869540</p>
                 <p><i class="fa-solid fa-at"></i> kentrologo@gmail.com</p>
             </div>
         </div>
