--- a/occupational-therapy.html
+++ b/occupational-therapy.html
@@ -159,7 +159,8 @@
                 <h2><a href="contact.html">Contact Us</a></h2>
                 <h3>Address</h3>
                 <p><i class="fa-solid fa-location-dot"></i> Vasilis Olgas 128, Thessaloniki, Greece</p>
-                <p><i class="fa-solid fa-phone"></i> 01234567890</p>
+                <p><i class="fa-solid fa-phone"></i> +30 693 6927305</p>
+                <p><i class="fa-solid fa-phone"></i> +30 231 0869540</p>
                 <p><i class="fa-solid fa-at"></i> kentrologo@gmail.com</p>
             </div>
         </div>
