--- a/contact.html
+++ b/contact.html
@@ -60,19 +60,19 @@
                     <form action="thank-you-pg.html" target="_blank" method="GET" class="signup-form">
                         <div class="form-control form-first">
                             <label for="fname">First Name:<span class="required-field">*</span></label>
-                            <input type="text" id="fname" name="first_name" class="text-input" placeholder="John" required>
+                            <input type="text" id="fname" name="first_name" class="text-input" required>
                         </div>
                         <div class="form-control">
                             <label for="lname">Last Name:<span class="required-field">*</span></label>
-                            <input type="text" id="lname" name="last_name" class="text-input" placeholder="Smith" required>
+                            <input type="text" id="lname" name="last_name" class="text-input" required>
                         </div>
                         <div class="form-control">
                             <label for="email">Email Address:<span class="required-field">*</span></label>
-                            <input type="email" id="email" name="email_address" class="text-input" placeholder="youremail@example.com" required>
+                            <input type="email" id="email" name="email_address" class="text-input" required>
                         </div>
                         <div class="form-control">
                             <label for="phone">Contact Number:<span class="required-field">*</span></label>
-                            <input type="tel" id="phone" name="contact_number" class="text-input" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="012-345-67-890"required>
+                            <input type="tel" id="phone" name="contact_number" class="text-input" required>
                         </div>
                         <div class="form-control">
                             <label for="subject">Subject:<span class="required-field">*</span></label>
