Update comments to style.css, about-us.html and contact.html

--- a/about-us.html
+++ b/about-us.html
@@ -71,7 +71,7 @@
     </section>
     <hr>
 
-    <!-- Our team-->
+    <!-- Our team, code borrowed and edited from https://rising-women.herokuapp.com/mentors/-->
 
     <section class="our-team-container">
         <h2>Our Team</h2>
