--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     </header>
     <hr>
     
-    <!-- Contact form-->
+    <!-- Contact form, code borrowed and edited from https://rising-women.herokuapp.com/contact/-->
 
     <div class="form-container-outer">
         <div class="form-container-bg">
